--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 
             <div class="social-sidebar">
                 <a><i class='bx bxl-youtube'></i></a>
-                <a><i class='bx bxl-github'></i></a>
-                <a><i class='bx bxl-linkedin-square'></i></a>
+                <a href="https://github.com/afnan008" target="_blank" ><i class='bx bxl-github'></i></a>
+                <a href="https://www.linkedin.com/in/afnan-khan-706a78381/" target="_blank" ><i class='bx bxl-linkedin-square'></i></a>
             </div>
         </div>
 
